[package]
name = "awbw-replay-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1"
derive_builder = "0.20"
# strum = "0.26"
# strum_macros = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parquet = { version = "53.0", features = ["serde_json"] }

[dev-dependencies]
insta = { version = "1.40", features = ["redactions", "yaml"] }
